login page design

--- a/prism-outreach/src/index.html
+++ b/prism-outreach/src/index.html
@@ -33,11 +33,29 @@
   <link href="assets/css/mystyle.css" rel="stylesheet">
   <!-- <link rel="stylesheet" href="assets/css/bootstrap.min.css"> -->
   <!-- <script src="assets/js/bootstrap.min.js"></script> -->
+   <style>
+    body{margin:0 auto;padding:0 auto;}img{max-width:100%;height:auto;}
+    @keyframes image {
+    0% {
+    background-image: url(../../assets/images/5.jpg);
+    }
+    25% {
+    background-image: url(../../assets/static/images/1.jpg);
+    }
+    50% {
+    background-image: url(../../assets/images/2.jpg);
+    }
+    75% {
+    background-image: url(../../assets/images/3.jpg);
+    }
+    100% {
+    background-image: url(../../assets/images/4.jpg);
+    }
+    }
+    </style>
 </head>
 <body>
-<app-root></app-root>
-
-
+  <app-root></app-root>
 </body>
 
 <!-- Vendor JS Files -->
@@ -49,13 +67,12 @@
 <script src="assets/vendor/tinymce/tinymce.min.js"></script>
 <script src="assets/vendor/php-email-form/validate.js"></script>
 
-
 <!-- datepcker css & js -->
-  <link href="assets/css/jquery-ui.css" rel="stylesheet">
-  <link href="assets/css/jquery.timepicker.min.css" rel="stylesheet">
-  <script src="assets/js/jquery-ui.min.js"></script>
-  <script src="assets/js/jquery.timepicker.min.js"></script>
-  <script src="assets/js/main.js"></script>
+<link href="assets/css/jquery-ui.css" rel="stylesheet">
+<link href="assets/css/jquery.timepicker.min.css" rel="stylesheet">
+<script src="assets/js/jquery-ui.min.js"></script>
+<script src="assets/js/jquery.timepicker.min.js"></script>
+<script src="assets/js/main.js"></script>
 
   
 <script type="text/javascript">
