--- a/prism-outreach/src/index.html
+++ b/prism-outreach/src/index.html
@@ -73,9 +73,21 @@
 <script src="assets/js/jquery-ui.min.js"></script>
 <script src="assets/js/jquery.timepicker.min.js"></script>
 <script src="assets/js/main.js"></script>
-
   
 <script type="text/javascript">
+  function formatPhoneNumber(phoneNumberString) { 
+      var cleaned = ('' + phoneNumberString).replace(/\D/g, '');
+      var match = cleaned.match(/^(1|)?(\d{3})(\d{3})(\d{4})$/);
+      if (match) {
+        var intlCode = (match[1] ? '+1 ' : '');
+        var str = [intlCode, '(', match[2], ') ', match[3], '-', match[4]].join('');
+      //alert(str);
+      $('#alt_phone_no').val(str);
+    }else{
+      //alert(phoneNumberString);
+      $('#alt_phone_no').val(phoneNumberString);
+    }
+  }
  
     // function openModal() {
     //   alert(1);
